# Portfolio-Website

./: .env  .env.example  .replit  build-with-config.js  config.d.ts  config.js  deployment-guide.md  download-helper.js  download-instructions.txt  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vite.config.ts
client/src/: index.css  main.tsx
client/src/components/: Contact.tsx  Experience.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Projects.tsx  Skills.tsx
client/src/data/: portfolio-data.ts
client/src/lib/: types.ts
client/src/pages/: Home.tsx
db/: index.ts  seed.ts  update-portfolio.ts
download/client/src/components/: About.tsx  Footer.tsx  Navbar.tsx  Projects.tsx  Resume.tsx  Skills.tsx
download/client/src/data/: portfolio-data.ts
download/client/src/pages/: Home.tsx
download/db/: update-portfolio.ts
download/server/: routes.ts  storage.ts
download/shared/: schema.ts
server/: index.ts  routes.ts
shared/: schema.ts
